Sync Kafka Connect from apache/iceberg